# StemForge

./: .env.example  .gitignore  .gitmodules  ACKNOWLEDGMENTS.md  CLAUDE.md  CONTRIBUTING.md  GENERATE.md  INSTRUCTIONS.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-COMMERCIAL.md  README.md  THIRD-PARTY-NOTICES.md  config.py  pyproject.toml  pyproject.toml.MAC  run.py
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md
.planning/phases/02-adtof-backend/: 02-01-PLAN.md  02-02-PLAN.md
.planning/phases/03-loader-and-pipeline-wiring/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-VALIDATION.md
.planning/phases/04-validation-and-ux-polish/: 04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-larsnet-registry-and-loader-stub/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md
.planning/phases/06-onset-detection-backend/: 06-01-SUMMARY.md
.planning/phases/07-midi-model-loader-extensions/: 07-01-PLAN.md  07-01-SUMMARY.md
.planning/phases/08-midipipeline-mode-dispatcher/: 08-01-SUMMARY.md  08-02-SUMMARY.md
.planning/phases/09-session-store-and-api-endpoints/: 09-01-SUMMARY.md
backend/: main.py
backend/api/: acestep_wrapper.py  audio.py  compose.py  enhance.py  export.py  generate.py  midi.py  mix.py  separate.py  sfx.py  system.py  voice.py
backend/compose_backend/: __init__.py  embedded.py  protocol.py  remote.py
backend/services/: acestep_state.py  job_manager.py  pipeline_manager.py  session_store.py  sfx_renderer.py
docs/: COMPOSE.md  CURRENT_STATE.md  FUTURE_PLANS.md  GENERATE.md  INSTRUCTIONS.md  MIGRATION_PLAN.md  MUSIC21_INTEGRATION_SPEC.md  RESULT_TRANSPORT_SPEC.md  SFX_STEM_BUILDER_SPEC.md  SYNTH.md
frontend/: app.js  index.html  style.css
frontend/components/: audio-player.js  compose.js  enhance.js  export.js  generate.js  loader.js  midi-viz.js  midi.js  mix.js  separate.js  sfx.js  waveform-diff.js  waveform.js
gui/: __init__.py  app.py  audio_player.py  constants.py  icons.py  state.py  ui_queue.py
gui/components/: __init__.py  basicpitch_panel.py  demucs_panel.py  export_panel.py  file_browser.py  loader.py  midi_panel.py  midi_player_widget.py  mix_panel.py  musicgen_panel.py  waveform_widget.py
models/: __init__.py  basicpitch_loader.py  demucs_loader.py  midi_loader.py  musicgen_loader.py  registry.py  roformer_loader.py
models/basicpitch/: inference.py  note_creation.py
pipelines/: __init__.py  adtof_backend.py  autotune_pipeline.py  basicpitch_pipeline.py  demucs_pipeline.py  effects_pipeline.py  enhance_pipeline.py  larsnet_backend.py  midi_pipeline.py  musicgen_pipeline.py  onset_backend.py  resample.py  roformer_pipeline.py  rvc_pipeline.py  vocal_midi_pipeline.py
scripts/: download_larsnet_weights.sh
scripts/hooks/: post-merge
tests/: diag.py  test_adtof_backend.py  test_audiocraft.py  test_av.py  test_basicpitch.py  test_compose_backend.py  test_demucs.py  test_drum_map.py  test_drum_midi_integration.py  test_drum_midi_spec.py  test_faster_whisper.py  test_gpu_scheduler.py  test_larsnet_backend.py  test_larsnet_import.py  test_larsnet_spec.py  test_librosa.py  test_midi_api_guards.py  test_midi_loader_drum.py  test_midi_loader_larsnet.py  test_midi_pipeline_mode_dispatch.py  test_midi_pipeline_routing.py  test_notes_to_midi_drum.py  test_onset_backend.py  test_sao.py  test_session_store_drum_sub_stems.py  test_spacy.py  test_torch.py  test_transformers.py  test_vocal_midi_pipeline.py  test_vp_mode.py
utils/: __init__.py  audio_io.py  audio_profile.py  cache.py  device.py  drum_map.py  errors.py  logging.py  logging_utils.py  midi_io.py  music21_bridge.py  nsf_shift.py  paths.py  platform.py  psola.py  stft_shift.py  world_shift.py  world_shift_fast.py  wsl.py
